# JTWPA_Design

./: .gitignore  pyproject.toml
jtwpa_design/: __init__.py  config.py  helper.py  layers.yaml  pdk.py  tech.py
jtwpa_design/builders/components/: open_stub_capacitor.py  twpa_launcher.py
jtwpa_design/cells/: __init__.py
jtwpa_design/cells/chips/: __init__.py  spiral.py  test.py  twenty_five_mm_chip.py
jtwpa_design/cells/chips/npy/: JJ_arc1.npy  JJ_arc2.npy  JJ_arch_spiral.npy  arranged_capacitor_points.npy
jtwpa_design/cells/components/: JJ.py  __init__.py  marker.py  open_stub_capacitor.py  rectangle.py  text_id.py  twpa_launcher.py
jtwpa_design/cells/paths/: __init__.py  jtwpa_path.py
jtwpa_design/cells/wafers/: __init__.py  four_inches_wafer.py
jtwpa_design/helpers/: __init__.py  arch_spiral.py  generate_arranged_points.py  generate_bridge_paths.py  generate_jj_cells.py  generate_spiral_chip.py  tukey_window.py
jtwpa_design/klayout/: layers.lyp  tech.lyt
jtwpa_design/parameters/: __init__.py  _base.py  common.py  rules.py
jtwpa_design/parameters/assemblies/: jtwpa_line.py
jtwpa_design/parameters/chips/: __init__.py  spiral.py  test.py  twenty_five_mm_chip.py
jtwpa_design/parameters/components/: __init__.py  jj.py  open_stub_capacitor.py  twpa_launcher.py
jtwpa_design/parameters/features/: chip_frame.py  label.py  marker.py
jtwpa_design/parameters/wafers/: four_inch_wafer.py  wafer.py
